[package]
name = "ctflag_derive"
version = "0.1.1"
authors = ["Adam Lesinski <adamlesinski@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "The derive macro implementation for ctflag"
repository = "https://github.com/adamlesinski/ctflag"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"
unicode-segmentation = "1.3"